Added the emails to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 The authors:
 Håkon Vågsether <hauk142@gmail.com>, 
-Audun Måseidvåg <TODO: Add your email address here>,
-Kent Moe <TODO: Add your email address here>
+Audun Måseidvåg <au.maas@adsl.no>,
+Kent Moe <kentvegard@hotmail.com>
