--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Jaguti, SDL game. Similar to Powder Game ( http://dan-ball.jp/en/javagame/dust/ )
+Jaguti, a discontinued SDL game. Similar to Powder Game ( http://dan-ball.jp/en/javagame/dust/ )
